Updated latest java feature documents